# src/main/java/org/girardsimon/wealthpay/account/application/response/ReservationCaptureStatus.java
@@ -1,6 +1,0 @@
-package org.girardsimon.wealthpay.account.application.response;
-
-public enum ReservationCaptureStatus {
-  CAPTURED,
-  NO_EFFECT
-}
