# src/main/java/org/girardsimon/wealthpay/account/infrastructure/web/AccountReservationController.java
@@ -2,21 +2,18 @@ package org.girardsimon.wealthpay.account.infrastructure.web;
 
 import java.util.UUID;
 import org.girardsimon.wealthpay.account.api.generated.AccountReservationApi;
-import org.girardsimon.wealthpay.account.api.generated.model.CancelReservationResponseDto;
-import org.girardsimon.wealthpay.account.api.generated.model.CaptureReservationResponseDto;
+import org.girardsimon.wealthpay.account.api.generated.model.ReservationResponseDto;
 import org.girardsimon.wealthpay.account.api.generated.model.ReserveFundsRequestDto;
 import org.girardsimon.wealthpay.account.api.generated.model.ReserveFundsResponseDto;
 import org.girardsimon.wealthpay.account.application.AccountApplicationService;
-import org.girardsimon.wealthpay.account.application.response.CancelReservationResponse;
-import org.girardsimon.wealthpay.account.application.response.CaptureReservationResponse;
+import org.girardsimon.wealthpay.account.application.response.ReservationResponse;
 import org.girardsimon.wealthpay.account.application.response.ReserveFundsResponse;
 import org.girardsimon.wealthpay.account.domain.command.CancelReservation;
 import org.girardsimon.wealthpay.account.domain.command.CaptureReservation;
 import org.girardsimon.wealthpay.account.domain.command.ReserveFunds;
 import org.girardsimon.wealthpay.account.infrastructure.web.mapper.CancelReservationDtoToDomainMapper;
-import org.girardsimon.wealthpay.account.infrastructure.web.mapper.CancelReservationResponseToDtoMapper;
 import org.girardsimon.wealthpay.account.infrastructure.web.mapper.CaptureReservationDtoToDomainMapper;
-import org.girardsimon.wealthpay.account.infrastructure.web.mapper.CaptureReservationResponseToDtoMapper;
+import org.girardsimon.wealthpay.account.infrastructure.web.mapper.ReservationResponseToDtoMapper;
 import org.girardsimon.wealthpay.account.infrastructure.web.mapper.ReserveFundsDtoToDomainMapper;
 import org.girardsimon.wealthpay.account.infrastructure.web.mapper.ReserveFundsResponseToDtoMapper;
 import org.springframework.http.ResponseEntity;
@@ -30,46 +27,40 @@ public class AccountReservationController implements AccountReservationApi {
   private final ReserveFundsDtoToDomainMapper reserveFundsDtoToDomainMapper;
   private final ReserveFundsResponseToDtoMapper reserveFundsResponseToDtoMapper;
   private final CaptureReservationDtoToDomainMapper captureReservationDtoToDomainMapper;
-  private final CaptureReservationResponseToDtoMapper captureReservationResponseToDtoMapper;
   private final CancelReservationDtoToDomainMapper cancelReservationDtoToDomainMapper;
-  private final CancelReservationResponseToDtoMapper cancelReservationResponseToDtoMapper;
+  private final ReservationResponseToDtoMapper reservationResponseToDtoMapper;
 
   public AccountReservationController(
       AccountApplicationService accountApplicationService,
       ReserveFundsDtoToDomainMapper reserveFundsDtoToDomainMapper,
       ReserveFundsResponseToDtoMapper reserveFundsResponseToDtoMapper,
       CaptureReservationDtoToDomainMapper captureReservationDtoToDomainMapper,
-      CaptureReservationResponseToDtoMapper captureReservationResponseToDtoMapper,
       CancelReservationDtoToDomainMapper cancelReservationDtoToDomainMapper,
-      CancelReservationResponseToDtoMapper cancelReservationResponseToDtoMapper) {
+      ReservationResponseToDtoMapper reservationResponseToDtoMapper) {
     this.accountApplicationService = accountApplicationService;
     this.reserveFundsDtoToDomainMapper = reserveFundsDtoToDomainMapper;
     this.reserveFundsResponseToDtoMapper = reserveFundsResponseToDtoMapper;
     this.captureReservationDtoToDomainMapper = captureReservationDtoToDomainMapper;
-    this.captureReservationResponseToDtoMapper = captureReservationResponseToDtoMapper;
     this.cancelReservationDtoToDomainMapper = cancelReservationDtoToDomainMapper;
-    this.cancelReservationResponseToDtoMapper = cancelReservationResponseToDtoMapper;
+    this.reservationResponseToDtoMapper = reservationResponseToDtoMapper;
   }
 
   @Override
-  public ResponseEntity<CancelReservationResponseDto> cancelReservation(
-      UUID id, UUID reservationId) {
+  public ResponseEntity<ReservationResponseDto> cancelReservation(UUID id, UUID reservationId) {
     CancelReservation cancelReservation =
         cancelReservationDtoToDomainMapper.apply(id, reservationId);
-    CancelReservationResponse cancelReservationResponse =
+    ReservationResponse reservationResponse =
         accountApplicationService.cancelReservation(cancelReservation);
-    return ResponseEntity.ok(cancelReservationResponseToDtoMapper.apply(cancelReservationResponse));
+    return ResponseEntity.ok(reservationResponseToDtoMapper.apply(reservationResponse));
   }
 
   @Override
-  public ResponseEntity<CaptureReservationResponseDto> captureReservation(
-      UUID id, UUID reservationId) {
+  public ResponseEntity<ReservationResponseDto> captureReservation(UUID id, UUID reservationId) {
     CaptureReservation captureReservation =
         captureReservationDtoToDomainMapper.apply(id, reservationId);
-    CaptureReservationResponse captureReservationResponse =
+    ReservationResponse captureReservationResponse =
         accountApplicationService.captureReservation(captureReservation);
-    return ResponseEntity.ok(
-        captureReservationResponseToDtoMapper.apply(captureReservationResponse));
+    return ResponseEntity.ok(reservationResponseToDtoMapper.apply(captureReservationResponse));
   }
 
   @Override
